<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_aler_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitedrank">

        <LinearLayout
            android:id="@+id/lv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colororange">
            <TextView
                android:id="@+id/tv_aler_category_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_aler_category_title"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>


        <RadioGroup
            android:id="@+id/rg_aler_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lv_title"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_aler_category_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/textview_aler_category_paycheck"/>

            <RadioButton
                android:id="@+id/rb_aler_category_petty_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/textview_aler_category_petty_cash"/>

            <RadioButton
                android:id="@+id/rb_aler_category_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/textview_aler_category_bonus"/>

            <RadioButton
                android:id="@+id/rb_aler_category_child_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/textview_aler_category_child_support"/>

            <RadioButton
                android:id="@+id/rb_aler_category_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/textview_aler_category_stocks"/>

            <RadioButton
                android:id="@+id/rb_aler_category_bond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/textview_aler_category_bonds"/>

            <RadioButton
                android:id="@+id/rb_aler_category_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/textview_aler_category_other"/>

        </RadioGroup>

    </RelativeLayout>

</LinearLayout>